--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 
-                <a class="navbar-brand" href="index.html">Modern Business</a>
+                <a class="navbar-brand" href="index.html">Vomap</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
