--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="blog-home-1.html">Blog Home 1</a>
+                            <li><a href="blog-home-1.html">Bora lá</a>
                             </li>
                             <li><a href="blog-home-2.html">Blog Home 2</a>
                             </li>
